# Bacquerya-LLM

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  run_download_llm.py  run_llm_locally.py
lib/: llm.py  summariser.py
tests/: test_download_llm.py  test_llm.py
tests/test_data/: abstract_example.json
