[tool.poetry]
name = "llms"
version = "0.1.0"
description = ""
authors = ["Berk Gonenc <berk@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.5.1"
transformers = "^4.35.0"
accelerate = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"